--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1> Hello Coursera! It's an amazing Course</h1>
+<h1> Hello Coursera! It's an interesting Course</h1>
 </body>
 </html>
